// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a check, whole, on recorded real answers > a HIP-3 long whose dex will not answer for its orders 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": false,
    "coin": "xyz:SP500",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 20000000,
    "segments": [],
    "side": "long",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Resting orders on the xyz dex could not be read",
    "Size versus open interest not computed for a HIP-3 dex market",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Resting orders on the xyz dex could not be read",
    },
    {
      "failure": false,
      "text": "Size versus open interest not computed for a HIP-3 dex market",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "decisive": true,
      "label": "Largest position",
      "source": "Nansen",
      "value": "$20.0M xyz:SP500 long",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "not-applicable",
  "hedgeScope": "none",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T14:59:00.000Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "partial",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "xyz:SP500",
        "side": "long",
        "sizeUsd": 20000000,
      },
    ],
    "grossUsd": 20000000,
    "headlineCoin": "xyz:SP500",
    "headlineLiqDistanceBasis": "entry",
    "headlineLiqDistancePct": 0.5,
    "headlineNotionalUsd": 20000000,
    "headlineShare": 1,
    "headlineSide": "long",
    "nPositions": 1,
    "netSide": "long",
    "netToGross": 1,
    "netUsd": 20000000,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T14:59:00.000Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Largest position",
        "source": "Nansen",
        "value": "$20.0M xyz:SP500 long",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Realized PnL, 30d",
        "source": "Nansen",
        "value": "-$15.5M",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Resting orders on the xyz dex could not be read",
      "Size versus open interest not computed for a HIP-3 dex market",
    ],
    "link": null,
    "more": 0,
    "provenance": "Positions as of 18 Sept, 14:59 UTC · checked live, rules v5",
  },
  "sizeVsOi": null,
  "source": "nansen",
  "summary": "100% of the exposure is one $20.0M xyz:SP500 long, but the resting orders of this account could not be read in full, so whether it quotes both sides of this market is unknown.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "quotes_not_checked",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "50% (from entry)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "$1K",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$250",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > a lone long, with its funding history 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": false,
    "coin": "BTC",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 50000000,
    "segments": [],
    "side": "long",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
  ],
  "degraded": false,
  "evidence": [
    {
      "decisive": true,
      "label": "Largest position",
      "source": "Nansen",
      "value": "$50.0M BTC long",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "not-applicable",
  "hedgeScope": "none",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T14:59:00.000Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "BTC",
        "side": "long",
        "sizeUsd": 50000000,
      },
    ],
    "grossUsd": 50000000,
    "headlineCoin": "BTC",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.9980434867674488,
    "headlineNotionalUsd": 50000000,
    "headlineShare": 1,
    "headlineSide": "long",
    "nPositions": 1,
    "netSide": "long",
    "netToGross": 1,
    "netUsd": 50000000,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T14:59:00.000Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Largest position",
        "source": "Nansen",
        "value": "$50.0M BTC long",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Realized PnL, 30d",
        "source": "Nansen",
        "value": "-$15.5M",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 0,
    "provenance": "Positions as of 18 Sept, 14:59 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.018147816861505465,
  "source": "nansen",
  "summary": "100% of the exposure is one $50.0M BTC long. Spot cannot offset a long, and debts or other derivatives are not read here.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "directional_concentration",
    ],
    "strength": null,
    "verdict": "looks_like_a_bet",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "100% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "$1K",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$250",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "1.8%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
    {
      "label": "Earliest funding found",
      "source": "Nansen",
      "value": "575 days ago on arbitrum, by an unlabelled wallet",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > a short 60% covered 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 100000000,
    "segments": [
      {
        "kind": "covered",
        "share": 0.6,
        "usd": 60000000,
      },
      {
        "kind": "residual",
        "share": 0.4,
        "usd": 40000000,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
  ],
  "degraded": false,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Nansen",
      "value": "$100.0M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "decisive": true,
      "label": "Hedge found",
      "source": "Nansen",
      "value": "60% (Nansen-supported chains)",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0.6,
    "hedgeUsd": 60000000,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 60000000,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T14:59:00.000Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 100000000,
      },
    ],
    "grossUsd": 100000000,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.9392235196875278,
    "headlineNotionalUsd": 100000000,
    "headlineShare": 1,
    "headlineSide": "short",
    "nPositions": 1,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 100000000,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T14:59:00.000Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Hedge found",
        "source": "Nansen",
        "value": "60% (Nansen-supported chains)",
      },
      {
        "label": "Largest position",
        "source": "Nansen",
        "value": "$100.0M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 0,
    "provenance": "Positions as of 18 Sept, 14:59 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.04084778513688547,
  "source": "nansen",
  "summary": "The $100.0M ETH short is 60% covered by spot ETH held by this address on Nansen-supported chains, which leaves $40.0M of it short.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "partial_offset",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "94% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "$1K",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$250",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "4.1%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > a short covered by its own WETH 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 100000000,
    "segments": [
      {
        "kind": "covered",
        "share": 0.95,
        "usd": 95000000,
      },
      {
        "kind": "residual",
        "share": 0.05,
        "usd": 5000000,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
  ],
  "degraded": false,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Nansen",
      "value": "$100.0M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "decisive": true,
      "label": "Hedge found",
      "source": "Nansen",
      "value": "95% (Nansen-supported chains)",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0.95,
    "hedgeUsd": 95000000,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 95000000,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T14:59:00.000Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 100000000,
      },
    ],
    "grossUsd": 100000000,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.9392235196875278,
    "headlineNotionalUsd": 100000000,
    "headlineShare": 1,
    "headlineSide": "short",
    "nPositions": 1,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 100000000,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T14:59:00.000Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Hedge found",
        "source": "Nansen",
        "value": "95% (Nansen-supported chains)",
      },
      {
        "label": "Largest position",
        "source": "Nansen",
        "value": "$100.0M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 0,
    "provenance": "Positions as of 18 Sept, 14:59 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.04084778513688547,
  "source": "nansen",
  "summary": "The $100.0M ETH short is 95% covered by $95.0M of spot ETH held by this address on Nansen-supported chains.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "hedge_leg",
    ],
    "strength": null,
    "verdict": "hedged",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "94% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "$1K",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$250",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "4.1%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: Nansen answers 200 with the wrong shape 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 179353809.8238,
    "segments": [
      {
        "kind": "residual",
        "share": 1,
        "usd": 179353809.8238,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Nansen positions came back in an unexpected shape: positions read from Hyperliquid, main dex only",
    "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "Nansen positions came back in an unexpected shape: positions read from Hyperliquid, main dex only",
    },
    {
      "failure": false,
      "text": "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "decisive": true,
      "label": "Largest position",
      "source": "Hyperliquid",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Hyperliquid",
      "value": "43%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Hyperliquid",
      "value": "100%",
    },
    {
      "label": "Hedge found",
      "source": "Nansen",
      "value": "0% (Nansen-supported chains)",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "complete",
  "mainDexPositionCount": null,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:24.997Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179353809.8238,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106493907.31815,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61974115.1568,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32234515.5104,
      },
      {
        "coin": "ZEC",
        "side": "short",
        "sizeUsd": 24370809.836,
      },
    ],
    "grossUsd": 416970282.89358413,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.3757018142428467,
    "headlineNotionalUsd": 179353809.8238,
    "headlineShare": 0.43013571273992507,
    "headlineSide": "short",
    "nPositions": 14,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 416970282.89358413,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:24.997Z",
  "positionsCoverage": "partial",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Largest position",
        "source": "Hyperliquid",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Hyperliquid",
        "value": "43%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Hyperliquid",
        "value": "100%",
      },
      {
        "label": "Hedge found",
        "source": "Nansen",
        "value": "0% (Nansen-supported chains)",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Positions were measured 116 minutes before this check, not at the moment of it",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 2,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07326205887164401,
  "source": "hyperliquid",
  "summary": "Of what could be read, 43% of the exposure is one $179.4M ETH short - but only the main perp dex was read, and a HIP-3 position would not appear here, so this is not the whole portfolio.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "positions_not_complete",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Hyperliquid",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Hyperliquid",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Hyperliquid",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Hyperliquid",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: Nansen not used, and why 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "partial",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 179353809.8238,
    "segments": [
      {
        "kind": "not-checked",
        "share": 1,
        "usd": 179353809.8238,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Nansen not used (today's Nansen credits are used up): main-dex positions only, no other chains, no linked wallets",
    "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Nansen not used (today's Nansen credits are used up): main-dex positions only, no other chains, no linked wallets",
    },
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Hyperliquid",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Hyperliquid",
      "value": "43%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Hyperliquid",
      "value": "100%",
    },
    {
      "decisive": true,
      "label": "Hedge found",
      "source": "Hyperliquid",
      "value": "0% (Hyperliquid spot)",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "partial",
  "hedgeScope": "hyperliquid",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": null,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:24.997Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": null,
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179353809.8238,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106493907.31815,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61974115.1568,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32234515.5104,
      },
      {
        "coin": "ZEC",
        "side": "short",
        "sizeUsd": 24370809.836,
      },
    ],
    "grossUsd": 416970282.89358413,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.3757018142428467,
    "headlineNotionalUsd": 179353809.8238,
    "headlineShare": 0.43013571273992507,
    "headlineSide": "short",
    "nPositions": 14,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 416970282.89358413,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:24.997Z",
  "positionsCoverage": "partial",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Hedge found",
        "source": "Hyperliquid",
        "value": "0% (Hyperliquid spot)",
      },
      {
        "label": "Largest position",
        "source": "Hyperliquid",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Hyperliquid",
        "value": "43%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Hyperliquid",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Nansen not used (today's Nansen credits are used up): main-dex positions only, no other chains, no linked wallets",
      "Positions were measured 116 minutes before this check, not at the moment of it",
    ],
    "link": null,
    "more": 2,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07326205887164401,
  "source": "hyperliquid",
  "summary": "43% of the exposure is one $179.4M ETH short, and whether it is hedged could not be established: only its Hyperliquid balances were read, and a hedge on another chain would not show.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "hedge_not_checked",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Hyperliquid",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Hyperliquid",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Hyperliquid",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Hyperliquid",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: Nansen positions fail, Hyperliquid main dex instead 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": {
      "ownership": "unverified",
      "usd": 399107867.06126976,
      "wallets": 2,
    },
    "excessUsd": 0,
    "headlineUsd": 179353809.8238,
    "segments": [
      {
        "kind": "covered",
        "share": 0.0000030696353798864233,
        "usd": 550.5508001525576,
      },
      {
        "kind": "residual",
        "share": 0.9999969303646201,
        "usd": 179353259.27299985,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Nansen positions unavailable: positions read from Hyperliquid, main dex only",
    "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
    },
    {
      "failure": false,
      "text": "Nansen positions unavailable: positions read from Hyperliquid, main dex only",
    },
    {
      "failure": false,
      "text": "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Hyperliquid",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Hyperliquid",
      "value": "43%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Hyperliquid",
      "value": "100%",
    },
    {
      "label": "Hedge found",
      "source": "Nansen",
      "value": "0.0% (Nansen-supported chains)",
    },
    {
      "decisive": true,
      "label": "Linked wallets",
      "source": "Nansen",
      "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0.0000030696353798864233,
    "hedgeUsd": 550.5508001525576,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 550.5508001525576,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": {
    "funders": [
      {
        "address": "0xb38e8c17e38363af6ebdcb3dae12e0243582891d",
        "chain": "arbitrum",
        "matchingUsd": 31527607.260203563,
        "relation": "First Funder",
      },
      {
        "address": "0xed0c6079229e2d407672a117c22b62064f4a4312",
        "chain": "ethereum",
        "matchingUsd": 367580259.8010662,
        "relation": "First Funder",
      },
    ],
    "linkedHedgeRatio": 2.225254470219281,
    "linkedHedgeUsd": 399107867.06126976,
  },
  "linkedHedgeCoverage": "complete",
  "mainDexPositionCount": null,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:24.997Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179353809.8238,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106493907.31815,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61974115.1568,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32234515.5104,
      },
      {
        "coin": "ZEC",
        "side": "short",
        "sizeUsd": 24370809.836,
      },
    ],
    "grossUsd": 416970282.89358413,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.3757018142428467,
    "headlineNotionalUsd": 179353809.8238,
    "headlineShare": 0.43013571273992507,
    "headlineSide": "short",
    "nPositions": 14,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 416970282.89358413,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:24.997Z",
  "positionsCoverage": "partial",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Linked wallets",
        "source": "Nansen",
        "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
      },
      {
        "label": "Largest position",
        "source": "Hyperliquid",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Hyperliquid",
        "value": "43%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Hyperliquid",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Positions were measured 116 minutes before this check, not at the moment of it",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 3,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07326205887164401,
  "source": "hyperliquid",
  "summary": "Less than 1% of the $179.4M ETH short is covered by ETH at this address. 2 wallets that funded it hold $399.1M of ETH, but funding does not establish ownership, so it is not counted as a hedge.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "linked_exposure_unverified",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Hyperliquid",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Hyperliquid",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Hyperliquid",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Hyperliquid",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: asked about a position that is not open 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": {
      "ownership": "unverified",
      "usd": 399107867.06126976,
      "wallets": 2,
    },
    "excessUsd": 0,
    "headlineUsd": 179404069.09797,
    "segments": [
      {
        "kind": "covered",
        "share": 0.0000030687754348086143,
        "usd": 550.5508001525576,
      },
      {
        "kind": "residual",
        "share": 0.9999969312245652,
        "usd": 179403518.54716986,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No DOGE long is open at this address; this answer is about the largest position instead",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": true,
      "text": "No DOGE long is open at this address; this answer is about the largest position instead",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Nansen",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "39%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Hedge found",
      "source": "Nansen",
      "value": "0.0% (Nansen-supported chains)",
    },
    {
      "decisive": true,
      "label": "Linked wallets",
      "source": "Nansen",
      "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0.0000030687754348086143,
    "hedgeUsd": 550.5508001525576,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 550.5508001525576,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": {
    "funders": [
      {
        "address": "0xb38e8c17e38363af6ebdcb3dae12e0243582891d",
        "chain": "arbitrum",
        "matchingUsd": 31527607.260203563,
        "relation": "First Funder",
      },
      {
        "address": "0xed0c6079229e2d407672a117c22b62064f4a4312",
        "chain": "ethereum",
        "matchingUsd": 367580259.8010662,
        "relation": "First Funder",
      },
    ],
    "linkedHedgeRatio": 2.2246310748020024,
    "linkedHedgeUsd": 399107867.06126976,
  },
  "linkedHedgeCoverage": "complete",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:21.479Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179404069.09797,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106495271.7675,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61984430.513269,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32239769.809744,
      },
      {
        "coin": "xyz:GOLD",
        "side": "short",
        "sizeUsd": 26446203.34972,
      },
    ],
    "grossUsd": 463266803.598905,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.37556765107464973,
    "headlineNotionalUsd": 179404069.09797,
    "headlineShare": 0.38725863304744257,
    "headlineSide": "short",
    "nPositions": 17,
    "netSide": "short",
    "netToGross": 0.9969805345098479,
    "netUsd": 461867985.47270507,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:21.479Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Linked wallets",
        "source": "Nansen",
        "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
      },
      {
        "label": "Largest position",
        "source": "Nansen",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "39%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Positions were measured 116 minutes before this check, not at the moment of it",
      "No DOGE long is open at this address; this answer is about the largest position instead",
    ],
    "link": null,
    "more": 2,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07328258867196834,
  "source": "nansen",
  "summary": "Less than 1% of the $179.4M ETH short is covered by ETH at this address. 2 wallets that funded it hold $399.1M of ETH, but funding does not establish ownership, so it is not counted as a hedge.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "linked_exposure_unverified",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: asked about its second-largest position 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "BTC",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 106495271.7675,
    "segments": [
      {
        "kind": "residual",
        "share": 1,
        "usd": 106495271.7675,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Selected position",
      "source": "Nansen",
      "value": "$106.5M BTC short",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "23%",
    },
    {
      "decisive": true,
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Hedge found",
      "source": "Nansen",
      "value": "0% (Nansen-supported chains)",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": {
    "coin": "BTC",
    "side": "short",
  },
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": {
    "funders": [
      {
        "address": "0xb38e8c17e38363af6ebdcb3dae12e0243582891d",
        "chain": "arbitrum",
        "matchingUsd": 0.2240909833396275,
        "relation": "First Funder",
      },
      {
        "address": "0xed0c6079229e2d407672a117c22b62064f4a4312",
        "chain": "ethereum",
        "matchingUsd": 261.0335958725408,
        "relation": "First Funder",
      },
    ],
    "linkedHedgeRatio": 0.0000024532327353110757,
    "linkedHedgeUsd": 261.2576868558804,
  },
  "linkedHedgeCoverage": "complete",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:21.479Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179404069.09797,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106495271.7675,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61984430.513269,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32239769.809744,
      },
      {
        "coin": "xyz:GOLD",
        "side": "short",
        "sizeUsd": 26446203.34972,
      },
    ],
    "grossUsd": 463266803.598905,
    "headlineCoin": "BTC",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.6432857922969074,
    "headlineNotionalUsd": 106495271.7675,
    "headlineShare": 0.2298789184551701,
    "headlineSide": "short",
    "nPositions": 17,
    "netSide": "short",
    "netToGross": 0.9969805345098479,
    "netUsd": 461867985.47270507,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:21.479Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
      {
        "label": "Selected position",
        "source": "Nansen",
        "value": "$106.5M BTC short",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "23%",
      },
      {
        "label": "Hedge found",
        "source": "Nansen",
        "value": "0% (Nansen-supported chains)",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Positions were measured 116 minutes before this check, not at the moment of it",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 1,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.03865313377305687,
  "source": "nansen",
  "summary": "17 open positions net out to 100% of gross exposure, mostly short; the selected leg is $106.5M BTC short (23% of it). No two-sided quoting, and no BTC was found at this address on Nansen-supported chains. Debts and other derivatives are not read here.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "directional_portfolio",
    ],
    "strength": null,
    "verdict": "looks_like_a_bet",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "64% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "-$9.2M",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$1.1M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "3.9%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: the deadline already passed, so no paid stage starts 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "partial",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 179353809.8238,
    "segments": [
      {
        "kind": "not-checked",
        "share": 1,
        "usd": 179353809.8238,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "This check ran out of time before it could read positions from Nansen",
    "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    "This check ran out of time before it could read holdings on other chains",
    "This check ran out of time before it could look at the wallets that funded the account",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "This check ran out of time before it could read positions from Nansen",
    },
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": true,
      "text": "This check ran out of time before it could read holdings on other chains",
    },
    {
      "failure": true,
      "text": "This check ran out of time before it could look at the wallets that funded the account",
    },
    {
      "failure": false,
      "text": "Positions read from Hyperliquid alone: a position on a HIP-3 dex would not appear here",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Hyperliquid",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Hyperliquid",
      "value": "43%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Hyperliquid",
      "value": "100%",
    },
    {
      "decisive": true,
      "label": "Hedge found",
      "source": "Hyperliquid",
      "value": "0% (Hyperliquid spot)",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "partial",
  "hedgeScope": "hyperliquid",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "missing",
  "mainDexPositionCount": null,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:24.997Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": null,
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179353809.8238,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106493907.31815,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61974115.1568,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32234515.5104,
      },
      {
        "coin": "ZEC",
        "side": "short",
        "sizeUsd": 24370809.836,
      },
    ],
    "grossUsd": 416970282.89358413,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.3757018142428467,
    "headlineNotionalUsd": 179353809.8238,
    "headlineShare": 0.43013571273992507,
    "headlineSide": "short",
    "nPositions": 14,
    "netSide": "short",
    "netToGross": 1,
    "netUsd": 416970282.89358413,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:24.997Z",
  "positionsCoverage": "partial",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Hedge found",
        "source": "Hyperliquid",
        "value": "0% (Hyperliquid spot)",
      },
      {
        "label": "Largest position",
        "source": "Hyperliquid",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Hyperliquid",
        "value": "43%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Hyperliquid",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "This check ran out of time before it could read positions from Nansen",
      "Positions were measured 116 minutes before this check, not at the moment of it",
    ],
    "link": null,
    "more": 4,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07326205887164401,
  "source": "hyperliquid",
  "summary": "43% of the exposure is one $179.4M ETH short, and whether it is hedged could not be established: only its Hyperliquid balances were read, and a hedge on another chain would not show.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "hedge_not_checked",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Hyperliquid",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Hyperliquid",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Hyperliquid",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Hyperliquid",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > abraxas: the full paid path, own balances and both funders 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": true,
    "coin": "ETH",
    "dataQuality": "measured",
    "elsewhere": {
      "ownership": "unverified",
      "usd": 399107867.06126976,
      "wallets": 2,
    },
    "excessUsd": 0,
    "headlineUsd": 179404069.09797,
    "segments": [
      {
        "kind": "covered",
        "share": 0.0000030687754348086143,
        "usd": 550.5508001525576,
      },
      {
        "kind": "residual",
        "share": 0.9999969312245652,
        "usd": 179403518.54716986,
      },
    ],
    "side": "short",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "Positions were measured 116 minutes before this check, not at the moment of it",
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
  ],
  "coverageNotes": [
    {
      "failure": true,
      "text": "Positions were measured 116 minutes before this check, not at the moment of it",
    },
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
    {
      "failure": false,
      "text": "2 funding wallets carry no Nansen label: whether they are private wallets or exchange addresses is unverified",
    },
  ],
  "degraded": true,
  "evidence": [
    {
      "label": "Largest position",
      "source": "Nansen",
      "value": "$179.4M ETH short",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "39%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "100%",
    },
    {
      "label": "Hedge found",
      "source": "Nansen",
      "value": "0.0% (Nansen-supported chains)",
    },
    {
      "decisive": true,
      "label": "Linked wallets",
      "source": "Nansen",
      "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0.0000030687754348086143,
    "hedgeUsd": 550.5508001525576,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 550.5508001525576,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "complete",
  "hedgeScope": "all-chains",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": {
    "funders": [
      {
        "address": "0xb38e8c17e38363af6ebdcb3dae12e0243582891d",
        "chain": "arbitrum",
        "matchingUsd": 31527607.260203563,
        "relation": "First Funder",
      },
      {
        "address": "0xed0c6079229e2d407672a117c22b62064f4a4312",
        "chain": "ethereum",
        "matchingUsd": 367580259.8010662,
        "relation": "First Funder",
      },
    ],
    "linkedHedgeRatio": 2.2246310748020024,
    "linkedHedgeUsd": 399107867.06126976,
  },
  "linkedHedgeCoverage": "complete",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T13:04:21.479Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "ETH",
        "side": "short",
        "sizeUsd": 179404069.09797,
      },
      {
        "coin": "BTC",
        "side": "short",
        "sizeUsd": 106495271.7675,
      },
      {
        "coin": "HYPE",
        "side": "short",
        "sizeUsd": 61984430.513269,
      },
      {
        "coin": "SOL",
        "side": "short",
        "sizeUsd": 32239769.809744,
      },
      {
        "coin": "xyz:GOLD",
        "side": "short",
        "sizeUsd": 26446203.34972,
      },
    ],
    "grossUsd": 463266803.598905,
    "headlineCoin": "ETH",
    "headlineLiqDistanceBasis": "mark",
    "headlineLiqDistancePct": 0.37556765107464973,
    "headlineNotionalUsd": 179404069.09797,
    "headlineShare": 0.38725863304744257,
    "headlineSide": "short",
    "nPositions": 17,
    "netSide": "short",
    "netToGross": 0.9969805345098479,
    "netUsd": 461867985.47270507,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T13:04:21.479Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Linked wallets",
        "source": "Nansen",
        "value": "$399.1M ETH in 2 wallets, owner unconfirmed",
      },
      {
        "label": "Largest position",
        "source": "Nansen",
        "value": "$179.4M ETH short",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "39%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "100%",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "Positions were measured 116 minutes before this check, not at the moment of it",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 1,
    "provenance": "Positions as of 18 Sept, 13:04 UTC · checked live, rules v5",
  },
  "sizeVsOi": 0.07328258867196834,
  "source": "nansen",
  "summary": "Less than 1% of the $179.4M ETH short is covered by ETH at this address. 2 wallets that funded it hold $399.1M of ETH, but funding does not establish ownership, so it is not counted as a hedge.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "linked_exposure_unverified",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "38% (from mark)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "-$13.7M",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$1.4M",
    },
    {
      "label": "Size vs open interest",
      "source": "Hyperliquid",
      "value": "7.3%",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;

exports[`a check, whole, on recorded real answers > thirty offsetting positions in thirty assets 1`] = `
{
  "address": "0xb83de012dba672c76a7dbbbf3e459cb59d7d6e36",
  "assetRegistryVersion": 2,
  "breakdown": {
    "applies": false,
    "coin": "C0",
    "dataQuality": "measured",
    "elsewhere": null,
    "excessUsd": 0,
    "headlineUsd": 1000000,
    "segments": [],
    "side": "long",
  },
  "checkedAt": "2026-09-18T15:00:00.000Z",
  "classifierVersion": "v5",
  "coverage": [
    "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
  ],
  "coverageNotes": [
    {
      "failure": false,
      "text": "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    },
  ],
  "degraded": false,
  "evidence": [
    {
      "decisive": true,
      "label": "Largest position",
      "source": "Nansen",
      "value": "$1.0M C0 long",
    },
    {
      "label": "Share of exposure",
      "source": "Nansen",
      "value": "3.3%",
    },
    {
      "label": "Net / gross exposure",
      "source": "Nansen",
      "value": "0%",
    },
    {
      "label": "Realized PnL, 30d",
      "source": "Nansen",
      "value": "-$15.5M",
    },
  ],
  "focus": null,
  "hedge": {
    "hedgeRatio": 0,
    "hedgeUsd": 0,
    "hedgeUsdBySource": {
      "hyperliquidSpot": 0,
      "onchain": 0,
    },
    "lendingUsd": 0,
    "unpricedMatches": 0,
    "unverifiedOnUnsupportedChainUsd": 0,
    "unverifiedUsd": 0,
  },
  "hedgeCoverage": "not-applicable",
  "hedgeScope": "none",
  "interpretedAt": "2026-09-18T15:00:00.000Z",
  "linkedHedge": null,
  "linkedHedgeCoverage": "not-applicable",
  "mainDexPositionCount": 14,
  "observationSchemaVersion": 5,
  "observedAt": "2026-09-18T14:59:00.000Z",
  "orders": {
    "bidShare": 0.5,
    "coinsBothSides": 0,
    "headlineQuoteNotionalUsd": 0,
    "headlineTwoSided": false,
    "headlineTwoSidedNotionalUsd": 0,
    "notionalUsd": 0,
    "restingOrders": 0,
    "twoSidedNotionalUsd": 0,
  },
  "ordersCoverage": "complete",
  "pnl": {
    "closedTrades": 84394,
    "realizedPnlUsd": -15479288.099574,
    "winRate": 0.33304500319927954,
    "windowDays": 30,
  },
  "positions": {
    "candidates": [
      {
        "coin": "C0",
        "side": "long",
        "sizeUsd": 1000000,
      },
      {
        "coin": "C1",
        "side": "short",
        "sizeUsd": 1000000,
      },
      {
        "coin": "C2",
        "side": "long",
        "sizeUsd": 1000000,
      },
      {
        "coin": "C3",
        "side": "short",
        "sizeUsd": 1000000,
      },
      {
        "coin": "C4",
        "side": "long",
        "sizeUsd": 1000000,
      },
    ],
    "grossUsd": 30000000,
    "headlineCoin": "C0",
    "headlineLiqDistanceBasis": "entry",
    "headlineLiqDistancePct": 0.5,
    "headlineNotionalUsd": 1000000,
    "headlineShare": 0.03333333333333333,
    "headlineSide": "long",
    "nPositions": 30,
    "netSide": null,
    "netToGross": 0,
    "netUsd": 0,
    "sameAssetOffsetShare": 0,
  },
  "positionsAsOf": "2026-09-18T14:59:00.000Z",
  "positionsCoverage": "complete",
  "share": {
    "evidence": [
      {
        "decisive": true,
        "label": "Largest position",
        "source": "Nansen",
        "value": "$1.0M C0 long",
      },
      {
        "label": "Share of exposure",
        "source": "Nansen",
        "value": "3.3%",
      },
      {
        "label": "Net / gross exposure",
        "source": "Nansen",
        "value": "0%",
      },
      {
        "label": "Realized PnL, 30d",
        "source": "Nansen",
        "value": "-$15.5M",
      },
    ],
    "limits": [
      "Not visible to this tool at all: positions on centralized exchanges, OTC deals, and wallets with no on-chain link to this address.",
      "No two-sided quoting found on the venues checked - the main dex and any HIP-3 dex this account holds a position on. A dex it only quotes, with no position of its own, would not appear here",
    ],
    "link": null,
    "more": 0,
    "provenance": "Positions as of 18 Sept, 14:59 UTC · checked live, rules v5",
  },
  "sizeVsOi": null,
  "source": "nansen",
  "summary": "30 open positions net out to 0% of gross exposure, which is the shape of a book - but there is no two-sided quoting behind it, so whether the $1.0M C0 long is inventory or a position of its own is not established.",
  "trades": {
    "buyShare": 0.596,
    "cappedByApiLimit": true,
    "crossedShare": 0.8075,
    "headlineClosedUsd": 0,
    "headlineFills": 0,
    "headlineOpenedUsd": 0,
    "headlineShareOfFills": 0,
    "notionalUsd": 3391369.82892,
    "sampleSize": 2000,
    "spanHours": 3.423656388888889,
    "tradesPerDay": 2000,
  },
  "verdict": {
    "reasons": [
      "diversified_book_no_quotes",
    ],
    "strength": null,
    "verdict": "unknown",
  },
  "vitals": [
    {
      "label": "Leverage",
      "source": "Nansen",
      "value": "5x cross",
    },
    {
      "label": "Distance to liquidation",
      "source": "Nansen",
      "value": "50% (from entry)",
    },
    {
      "label": "Unrealized PnL",
      "source": "Nansen",
      "value": "$1K",
    },
    {
      "label": "Funding since open",
      "source": "Nansen",
      "value": "-$250",
    },
    {
      "label": "Position flow",
      "source": "Hyperliquid",
      "value": "no fills (3.4h)",
    },
  ],
}
`;
